--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@material-ui/core": "^4.11.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-particles-js": "^3.5.3",
     "react-scripts": "4.0.3",
+    "tsparticles": "^1.32.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
