--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "aos": "^2.3.4",
     "gsap": "^3.7.1",
     "react": "^17.0.2",
+    "react-chrono": "^1.10.1",
     "react-dom": "^17.0.2",
     "react-particles-js": "^3.5.3",
     "react-router-dom": "^5.2.0",
